인트로 권한설정후 메인액티비티로

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <!-- 영문 이 아래는 번역 요구-->
     <string name="next">Next</string>
     <string name="set_permission">Set Permission</string>
+    <string name="perm_denied">If you do not have permission, the app can not be used.</string>
 </resources>
