--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="settings">Settings</string>
     <string name="near_bus_stop">NEAR BUS STOP</string>
     <string name="more">More</string>
+    <string name="search_history">SEARCH HISTORY</string>
+    <string name="refresh">Refresh Location</string>
+    <string name="help">I want people's help</string>
 </resources>
