검색 내역 리스트 터치범위 수정 롤리팝 이하의 버전에서 권한 페이지 생략 @string/help 오타 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,5 @@
     <string name="more">More</string>
     <string name="search_history">SEARCH HISTORY</string>
     <string name="refresh">Refresh Location</string>
-    <string name="help">I want people's help</string>
+    <string name="help">I want people\'s help</string>
 </resources>
