BusInfoActivity 추가, 헤더 레이아웃 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="setting_ver">Version</string>
     <string name="setting_email">Contact to Email</string>
     <string name="setting_email_sub">We support your problem</string>
+    <string name="info">Info</string>
 </resources>
