--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="search_hint">Bus Number, Bus Stop...</string>
     <string name="settings">Settings</string>
     <string name="near_bus_stop">NEAR BUS STOP</string>
+    <string name="bus_stop">BUS STOP</string>
     <string name="more">More</string>
     <string name="search_history">SEARCH HISTORY</string>
     <string name="refresh">Refresh Location</string>
@@ -43,4 +44,5 @@
     <string name="setting_email">Contact to Email</string>
     <string name="setting_email_sub">We support your problem</string>
     <string name="info">Info</string>
+    <string name="bus_fare">Bus fare</string>
 </resources>
