앱 처음 시작시 렘 데이터 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,7 @@
     <string name="bus_route">Bus Route</string>
     <string name="service_hours">Service Hours</string>
     <string name="to_last_stop">to last stop</string>
+
+    <string name="patch">Patching database</string>
+    <string name="wait">Please wating some secs..</string>
 </resources>
