--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="patch">Patching database</string>
     <string name="wait">Please wating some secs..</string>
     <string name="map">Map</string>
+    <string name="search">Search</string>
 </resources>
