--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,6 @@
     <string name="info_busfare">If more than two people get on the bus,\nplease tell bus driver.</string>
     <string name="close">Close</string>
     <string name="speak">Speak</string>
+    <string name="pay_to">Pay to</string>
+
 </resources>
