--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,9 @@
     <string name="speak">Speak</string>
     <string name="pay_to">Pay to</string>
 
+    <string name="main_loading">Loading...</string>
+    <string name="main_wait">Please wait some secs...</string>
+    <string name="main_err">Can't find any peripheral station.</string>
+    <string name="main_err_sub">Please check the location signal and refresh</string>
+
 </resources>
